# ChangeLog for app-emacs/coffee-mode
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*coffee-mode-0.5.2 (29 May 2014)

  29 May 2014; Hans de Graaff <graaff@gentoo.org>
  -coffee-mode-0.3.0.20120523.ebuild, +coffee-mode-0.5.2.ebuild:
  Version bump.

*coffee-mode-0.3.0.20120523 (29 Jun 2012)

  29 Jun 2012; Hans de Graaff <graaff@gentoo.org>
  +files/50coffee-mode-gentoo.el, +coffee-mode-0.3.0.20120523.ebuild,
  +metadata.xml:
  Initial import.
