@@ -1,1 +1,2 @@
 DIST coffee-mode-0.5.2.tar.gz 22099 SHA256 4d2b46d79ab723b7c21f8b73441194605172722374d22fd2047af769398a00c4 SHA512 96416860c7e4a65ac1f806e6050d1b285850c9b6d0efd783c011c865aeba39bc5cd5e8ac46f69ee10acc3ba55f5fc9399c1fa0339082c6dab66d3c50093f5aa3 WHIRLPOOL bc02796e0c589aa27e13588fd2e0bb9d4fcc1a1eb4b0eabc44e3c690de4817789c306be5f6f11ad3e1fc4a371044af770e9668d890b52ec3386563f60fcc4d5e
+DIST coffee-mode-0.6.0.tar.gz 99349 SHA256 f1e2fd0797d69ece434b00a88bbfddb4265d5e9bf12fd2a7d39ccbfb00200870 SHA512 9fd5b0f7a007c92417d67a355084c79b539007de9bc895020dbbb745d8029700ad2e9b898d73aba73861368b925f5a992f91d7b78b9147e893d9fbb1d09f8bf0 WHIRLPOOL 51ff7742a0b0980f55f4f2803b3fe70ffcecc2029740e8255658b24c4b801e67fb6b440864dfb5876aff38d10a31c89d15d1f353f923580f40785575f6589108
