@@ -1,6 +1,11 @@
 # ChangeLog for app-emacs/coffee-mode
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*coffee-mode-0.6.0 (24 Jun 2015)
+
+  24 Jun 2015; Hans de Graaff <graaff@gentoo.org> +coffee-mode-0.6.0.ebuild:
+  Version bump.
 
 *coffee-mode-0.5.2 (29 May 2014)
 
